--- a/app/templates/text-to-audio.html
+++ b/app/templates/text-to-audio.html
@@ -30,6 +30,9 @@
                         <input type="text" class="form-control" id="inputText" name="text" placeholder="Enter sentence (100 characters maximum)" maxlength="100" {% if text %} value="{{ text }}" {% endif %}>
                         <button type="button" class="btn btn-secondary" onclick="clearInput()">Clear</button>
                         <button type="submit" class="btn btn-primary">Generate</button>
+                        <button type="button" class="btn btn-info ml-2" id="listenAgainBtn" style="display: none;" onclick="listenAgain()">
+                            <img src="../static/icons/ear.svg" alt="Listen Again" style="width: 16px; height: 16px;">
+                        </button>
                     </div>
                 </form>
                 {% if word2phoneme_audio %}
@@ -110,7 +113,26 @@
 
     function clearInput() {
         document.getElementById('inputText').value = '';
+        document.getElementById('listenAgainBtn').style.display = 'none'; // hide listen again icon
     }
+
+    function listenAgain() {
+        var audioPlayer = document.getElementById('audioPlayer');
+        if (audioPlayer) {
+            audioPlayer.currentTime = 0;
+            audioPlayer.play()
+            .catch(error => console.error("Audio play failed:", error));
+        }
+    }
+    
+    document.addEventListener('DOMContentLoaded', function() {
+        var audioPlayer = document.getElementById('audioPlayer');
+        if (audioPlayer) {
+            audioPlayer.onended = function() {
+                document.getElementById('listenAgainBtn').style.display = 'inline-block';
+            };
+        }
+    });
 </script>
 
 {% endblock %}
